  + Annoyed face with tongue by Barkin Simsek @woswos #287
  + Québec flag by Denis Blanchette @dblanchette #293
  + Basque, Bretagne, and anarchist flag by Sam Hocevar @samhocevar #306
  + Unicode 13.1: face in clouds, face-unwell, heart on fire, mending heart,
    "man: beard" and "woman: beard" by Nelly Nieter
  + Champignon Mushroom extras-openmoji/food-drink by Liz Bravo @lizbravob

Redesign:
  * Amphora, Pile of Books, Dagger, Teddy Bear, Caterpillar, Lady Beetle, Microscope,
    Mosquito, Cactus, Kimono, Old Man, Guardsaman, Moyai, Mosque, Train Car,
    Bowl with Spoon, Serious Face with Symbols Covering Mouth, Sad but Relieved Face,
    Fearful Face, Yawning Face, 🎄📦️🦀🦪🧇🪐 and 🍊🍎🍓🍝🍮🎎🎦🏧💐🛩️🥒✒️
    by Liz Bravo @lizbravob
  * Fog, Foggy by Nelly Nieter
  * Moved old Fog to extras-openmoji/travel-places Foggy Mountain E20E
  * Moved old 🍮 to extras-openmoji/food-drink Cake E0C7
  * Moved old ✒️ to 1F58B

Fix:
  * Fix wrong Unicode of Catalonia flag by Sam Hocevar @samhocevar #305
  * Fix South Sudan flag star orientation by Sam Hocevar @samhocevar #301
  * Fix the Tajikistan flag, it has 7 stars, not 8 by Sam Hocevar @samhocevar #302
  * Fix East Timor flag star orientation by Sam Hocevar @samhocevar #303
  * Fix crescent in Brunei flag by Sam Hocevar @samhocevar #298
  * Fix white stripe of flag Slovakia #297
  * Consistency of contours of black shapes by @fuddl #273
  * Expression in Face with Hand Over Mouth
    Colour of mouth in Exploding Head
    by Liz Bravo #285
  * Fix slightly broken carrot

--------------------------------------------------------------------------------

🥳 OpenMoji 13.0 - 13 Nov 2020

Many improvements, fixes and new OpenMojis:
👉 Full support of Unicode Emoji 13.0. Yay!
👉 New Coronavirus related emojis by Guemil Project
👉 Lots of fixes and redesigns
👉 New logos and symbols

🙏 Special thanks to @lizbravob and @fuddl for all the generous contributions!

New:
  + Emoji 13: