@@ -331,3 +331,4 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ,E0C7,extras-openmoji,food-drink,cake,"custard, cherry",Miriam Vollmeier,2018-04-18
 ,E0C8,extras-openmoji,food-drink,champignon brown,"mushroom fungi",Liz Bravo,2021-05-04
 ,E0C9,extras-openmoji,food-drink,champignon white,"mushroom fungi",Liz Bravo,2021-05-04
+,E0CA,extras-openmoji,food-drink,boule bread,"french bread, traditional bread, round bread",Alexander Müller,2021-05-08
