@@ -3669,6 +3669,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E0C7,extras-openmoji,food-drink,cake,,"custard, cherry",Miriam Vollmeier,2018-04-18,,,,,,
 ,E0C8,extras-openmoji,food-drink,champignon brown,,mushroom fungi,Liz Bravo,2021-05-04,,,,,,
 ,E0C9,extras-openmoji,food-drink,champignon white,,mushroom fungi,Liz Bravo,2021-05-04,,,,,,
+,E0CA,extras-openmoji,food-drink,boule bread,,"french bread, traditional bread, round bread",Alexander Müller,2021-05-08,,,,,,
 ,E340,extras-openmoji,gardening,gardener man,,,Fanny Jung,2020-06-11,,,,,,
 ,E341,extras-openmoji,gardening,gardener woman,,,Fanny Jung,2020-06-11,,,,,,
 ,E342,extras-openmoji,gardening,gardening gloves,,,Fanny Jung,2020-06-11,,,,,,
