@@ -62390,6 +62390,23 @@
     "order": ""
   },
   {
+    "emoji": "",
+    "hexcode": "E0CA",
+    "group": "extras-openmoji",
+    "subgroups": "food-drink",
+    "annotation": "boule bread",
+    "tags": "",
+    "openmoji_tags": "french bread, traditional bread, round bread",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2021-05-08",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
     "emoji": "",
     "hexcode": "E340",
     "group": "extras-openmoji",
